--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <!--[if IE 8 ]><html class="ie ie8"><![endif]-->
 
     <head>
-        <title>Labelizr Demo</title>
+        <title>Dimensionator Demo</title>
         <meta charset="utf-8">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
